--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
               <div class="hero-text">
                 <h1>Snap<span class="accent-text">Folio</span></h1>
-                <h2>Alexander Chen</h2>
+                <h2>Michael Mann</h2>
                 <p class="lead">I'm a <span class="typed" data-typed-items="UI/UX Designer, Web Developer, Brand Strategist, Creative Director"></span></p>
                 <p class="description">Passionate about creating exceptional digital experiences that blend innovative design with functional development. Let's bring your vision to life.</p>
 
@@ -163,7 +163,7 @@
                 <div class="contact-links">
                   <a href="mailto:marcus@example.com" class="contact-item">
                     <i class="bi bi-envelope"></i>
-                    marcus@example.com
+                    cccris0503@gmail.com
                   </a>
                   <a href="tel:+15551234567" class="contact-item">
                     <i class="bi bi-telephone"></i>
